# gwassess

./: LICENSE.txt  Makefile  README.rst  example_usage.py  setup.cfg  setup.py
.github/workflows/: lint.yml  release.yml  test.yml
gwassess/: __init__.py  cockett.py  tracy.py  vauclin.py
tests/: test_solutions.py
