[metadata]
name = gwassess

[flake8]
# ignore:
# - E501 (line too long) - only ignore line length
# - W503 (line break before binary operator) - contradicts W504
# - W504 (line break after binary operator) - contradicts W503
# Note: W503 and W504 are mutually exclusive; modern PEP 8 recommends breaking before operators
ignore = E501,W503,W504
